fix(chart): sell point coloration

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
     const buyTrades = []
     const sellTrades = []
     const SELL_TRADE_TYPE = 0
-    const BUY_TRADE_TYPE = 1
+    const SELL_PARTIAL_TRADE_TYPE = 1
+    const BUY_TRADE_TYPE = 2
     let quoteCurrency = ''
     let quoteCurrencyBalance = 0
     let baseCurrency = ''
